# LXthon

./: .env.development  .env.production  .gitattributes  .gitignore  MISSION_ACCOMPLISHED.md  Makefile  PRESENTATION.md  README.md  REORGANIZATION_PLAN.md  REPOSITORY_STRUCTURE.md  SETUP_COMPLETE.md  create_demo.py  dev-setup.sh  docker-compose.prod.yml  docker-compose.yml  final_summary.py  project_structure.md  pyproject.toml  quick_train.py  run_frontend.sh  setup.sh  setup_app.sh  start-frontend.sh  test.sh  test_complete_system.py  test_full_app.py  train_model.py  validate_app.py
.github/workflows/: ci-cd.yml
backend/: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  setup-uv.sh
backend/app/: main.py
backend/app/models/: __init__.py  prediction.py
backend/app/services/: model_service.py
backend/app/utils/: image_processing.py
backend/models/: unet_eye_segmentation.keras
deployment/docker/: docker-compose.prod.yml
docs/: DEMO_REPORT.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md
docs/api/: README.md
docs/api/endpoints/: health.md  interactive-docs.md  model-info.md  prediction.md  root.md
docs/deployment/: README.md
docs/development/: quick-start.md  setup.md
docs/legacy/: PROJECT_STRUCTURE.md
docs/project-reports/: APPLICATION_FIXED_AND_OPERATIONAL.md  NEXTJS_15_UPGRADE_COMPLETE.md  REPOSITORY_REORGANIZATION_COMPLETE.md  REPOSITORY_TRANSFORMATION_COMPLETE.md
docs/reports/: BACKEND_HEALTH_RESOLUTION.md  DOCUMENTATION_ENHANCEMENT_COMPLETE.md  FASTAPI_UPGRADE_COMPLETE.md  FINAL_CHECKUP_REPORT.md  FINAL_ORGANIZATION_SUMMARY.md  NEXTJS_PERFORMANCE_OPTIMIZATION_COMPLETE.md  ORGANIZATION_COMPLETE.md  PORT_UPDATE_SUMMARY.md  REPOSITORY_ORGANIZATION_FINAL.md  UI_ENHANCEMENT_COMPLETE.md  UV_RUFF_SETUP.md
frontend/: Dockerfile.prod  create-icons.sh  next.config.js  performance-test.sh
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  ImageUpload.tsx  OptimizedImage.tsx  PerformanceMonitor.tsx  PerformanceMonitorClean.tsx  ResultDisplay.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/hooks/: useOptimizations.ts
notebooks/: model_training.ipynb
notebooks/training/: model_training.ipynb
scripts/: README.md
scripts/deployment/: README.md  start_app.sh
scripts/dev/: README.md  dev-setup-complete.sh  setup.sh  setup_app.sh  start-backend-dev.sh  start-backend.sh  start-frontend.sh  test.sh  verify_port_update.sh
scripts/development/: test_application.py  test_backend.py
scripts/setup/: setup_git_lfs.sh
scripts/testing/: test_prediction.py
scripts/utilities/: create_dummy_model.py  run_backend.py  standalone_demo.py
scripts/utils/: check-services.sh  verify-organization.sh
src/backend/: lint.sh  pyproject.toml  requirements.txt  speed-demo.sh
src/backend/app/services/: __init__.py  model_service.py
src/frontend/: demo-performance.sh  next.config.js  next.config.optimized.js  tsconfig.tsbuildinfo
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/components/: Footer.tsx  Header.tsx  LoadingComponents.tsx  PerformanceDashboard.tsx  PerformanceMonitor.tsx  ResultDisplay.tsx
src/frontend/src/types/: index.ts  react-19.d.ts
tests/: test_full_app.py  validate_app.py
tests/unit/: README.md  test_complete_system.py
tools/: README.md
